# rag-template

./: .env  Dockerfile  compose.yaml  pyproject.toml
app/: models.py  settings.py
app/routes/: api.py
app/services/: generation_service.py  retrieval_service.py
app/utils/: helpers.py
ui/: Dockerfile  pyproject.toml
ui/ui/: streamlit_app.py
