[tool.poetry]
name = "panaversity-chatbot"
version = "0.1.0"
description = ""
authors = ["Ahmed <ahmed369ww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.15"
langchain-community = "^0.2.14"
langchain-text-splitters = "^0.2.2"
openai = "^1.42.0"
streamlit = "^1.38.0"

langchain-chroma = ">=0.1.3,<0.2.0"



langchain-huggingface = "^0.0.3"
langchain-google-genai = "^1.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
